# SlicerTelemetry

./: CMakeLists.txt  LICENSE  README.md
SlicerTelemetryModule/: SlicerTelemetry.py
SlicerTelemetryModule/Resources/UI/: MyFirstModule.ui  SlicerTelemetry.ui
Telemetry/: CMakeLists.txt  Telemetry.py
Telemetry/Resources/UI/: TelemetryPermissionDialog.ui  TelemetrySendDialog.ui  TelemetrySummary.ui
